# image-editor

./: .gitignore  CMakeLists.txt  Makefile  README.md  apply_utils.c  apply_utils.h  checks.c  checks.h  commands.c  commands.h  image_editor.c  install.sh  main.c  main_menu.c  main_menu.h  options_header.c  options_header.h  options_utils.c  options_utils.h  read_utils.c  read_utils.h  structure.h  structure_header.h
check_utils/: checks.py
output/: c_1_5.pgm  c_1_6.pgm  c_1_7.pgm  c_1_7a.pgm  c_e_2.pgm  c_e_5.pgm  ci_1_1.pgm  ci_1_2.pgm  ci_1_3.pgm  ci_1_4.pgm  ci_1_5.pgm  ci_1_5a.pgm  ci_2_2.pgm  ci_2_2a.pgm  s_e_2.pgm  ss_g_ba_3a.ppm
